--- a/Road&trafficsigndetection.ipynb
+++ b/Road&trafficsigndetection.ipynb
@@ -5645,7 +5645,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 643
+          "height": 1000
         },
         "id": "BNJjYtUIAAKI",
         "outputId": "54407c2b-5b2d-4f3f-96f3-3c2905c10940"
@@ -5677,7 +5677,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 435
+          "height": 765
         },
         "id": "lAr9rUUDAv2v",
         "outputId": "b54e66b4-b12a-433c-fcee-b843c2c59e44"
@@ -6581,9 +6581,128 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "weightsPath = \"/content/RoadSignDetection/Self-Driving-Cars-6/runs/detect/train/weights\"\n",
+        "\n",
+        "!yolo task=detect mode=predict model={weightsPath}/best.pt conf=0.25 source='/content/ManualTestingData/stop-sign-with-red-traffic-light-2JCBB0T.jpg' save = True\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3zt2bU2E-PJM",
+        "outputId": "d3f8769d-96d1-4e87-9ebf-7fd62a320bf5"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/ultralytics/nn/tasks.py:332: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+            "  return torch.load(file, map_location='cpu')  # load\n",
+            "2025-01-04 01:55:52.803583: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "2025-01-04 01:55:52.824308: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "2025-01-04 01:55:52.830306: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "2025-01-04 01:55:52.844673: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+            "2025-01-04 01:55:53.908832: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+            "Ultralytics YOLOv8.0.20 🚀 Python-3.10.12 torch-2.5.1+cu121 CUDA:0 (Tesla T4, 15102MiB)\n",
+            "Model summary (fused): 168 layers, 3008573 parameters, 0 gradients, 8.1 GFLOPs\n",
+            "WARNING ⚠️ NMS time limit 0.550s exceeded\n",
+            "image 1/1 /content/ManualTestingData/stop-sign-with-red-traffic-light-2JCBB0T.jpg: 640x608 1 Stop, 33.5ms\n",
+            "Speed: 0.7ms pre-process, 33.5ms inference, 599.2ms postprocess per image at shape (1, 3, 640, 640)\n",
+            "Results saved to \u001b[1mruns/detect/predict4\u001b[0m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "files.download('/content/ManualTestingData/runs/detect/predict4/stop-sign-with-red-traffic-light-2JCBB0T.jpg')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "st-VdIeTAbUV",
+        "outputId": "f5c03633-9310-4ffd-a563-633a3b1d19c9"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_86b0b170-c665-4c95-a98d-45063aa2fedc\", \"stop-sign-with-red-traffic-light-2JCBB0T.jpg\", 378307)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "3zt2bU2E-PJM"
+        "id": "axz-UkRBAobt"
       },
       "execution_count": null,
       "outputs": []
@@ -6595,7 +6714,7 @@
       "gpuType": "T4",
       "provenance": [],
       "mount_file_id": "1oCdJdZVDvx-Kb4wuUy38i28GbBPkjwuw",
-      "authorship_tag": "ABX9TyPnZl8rqv8p60qweVwivqqz",
+      "authorship_tag": "ABX9TyMYbR18ZUd0NFpfA68MsFCV",
       "include_colab_link": true
     },
     "kernelspec": {
